enable teacher to manual log quran activity without geofencing
